# NLPengine

./: LICENSE  README.md  THIRD_PARTY_LICENSES.txt  environment.yml  pyproject.toml  requirement.txt  server.py
.github/workflows/: python-package-conda.yml
engine/: __init__.py  _posmap.py  nlpengine.py
engine/tools/: SentenceContext.py  __init__.py  jsonpayload.py  text_splitter.py
nlp_engine/: server.py
nlp_engine/engine/: _posmap.py  nlpengine.py
nlp_engine/engine/tools/: jsonpayload.py  sentence_filter.py
tests/: __init__.py  helloserver.py  nlpengine.py  nlpengine_test.py  test_server.py
