[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tsuzuru-note-nlp-engine"
version = "0.1.0"
description = "NLP engine for Tsuzuru project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn>=0.39.0",
    "mecab-python3>=1.0.12",
    ]

license = { text = "BSD-3-Clause" }

